# KMC

./: .gitmodules  CMakeLists.txt  makefile  makefile_mac
binning/: binning.cpp  build_index.cpp  build_index_sep.cpp  bwt_binning_common.hpp  heterozygosity.cpp  kmc_info.cpp
kmc_api/: kmc_file.cpp
kmc_dump_sample/: common.hpp  kmc_bin.cpp  kmc_bin_cmp_db.cpp  kmc_bin_investigate.cpp  kmc_bin_new.cpp  kmc_bin_qual_overwrite.cpp  kmc_cmp_reads.cpp  kmc_dump_sample.cpp  kmc_dump_sample_mutation_rate.cpp  kmc_find_unique.cpp  kmc_keep_unique.cpp  kmc_remove_Ns.cpp  re-pair.cpp
kmc_tools/: kmc_tools.cpp
